--- a/1차분석/참고사항.md
+++ b/1차분석/참고사항.md
@@ -1,1 +1,147 @@
-한국어 형태소 분석 참고: https://konlpy-ko.readthedocs.io/ko/v0.4.3/
+# 프로젝트 3차 텍스트 분석 과정
+
+
+
+## 1. 형태소 분석
+
+형태소 분석은 왜 필요한 걸까? 잠시 TF-IDF의 TF를 생각해 보자. TF는 Term Frequency를 줄임말이다. 단어의 빈도수 !! 간단하게, 단어의 중요도를 간단하게 보기위해서는 이게 참 쓸모가 있다. 
+
+예를 들어보자. 최근에 전국에 있는 지방직 소방 공무원 분들이 국가직으로 전환이 되었다. 이에대한 신문을 스크래핑을 해서 중요한 단어를 찾아내는 작업을 하려한다. 그러면 각 기사에서 무조건 나오는 단어가 있을 것이다. 무엇을것 같은가? 바로 **'소방 공무원'**이라는 단어 일 것이다. 아무래도 주체이다 보니, 모든 기사에서 출현하게 될 것이다. 당연하게, TF값도 높을 것이고. 이렇게 간단하게 키워드를 알아보기 위해서 형태소 분석이 필요하다. 
+
+왜냐하면, 우리나라에는 조사가 있기 때문에, 컴퓨터에서는 조사와 명사를 같이 붙여서 하나의 단어로 입력을 받기 때문에, 같은 소방공무원 이지만, 소방공무원은 / 소방공무원이 에 따라 TF 값이 분산이 된다, 이를 막기위해서, 더욱 정확도를 높이기 위해서 형태소 분석을 한다. 그러면 소방공무원 + [은,는,이,가]가 따로 출력이 되서 소방공무원의 카운트를 하게 된다. 이때문에 형태소 분석이 필요하다. 
+
+아마 미리 공부를 했거나, 조금만 생각을 하면, TF값에 허점이 있다는 것은 눈치는 채고 있을지 모르지만, 그것은 나중에 보충을 하기로 한다.
+
+
+
+### 1-1. 형태소분석을 하기 위해서는?
+
+
+
+ ![Konlpy.png에 대한 이미지 검색결과](https://konlpy-ko.readthedocs.io/ko/v0.4.3/_static/konlpy.png) 
+
+
+
+나 같은 경우에는 Knolpy의 코모란을 사용하기로 하였다. 일단 코드가 매우 간단하며, 속도와 정확도 또한 나쁜편이 아니기 때문이다. 이전 프로젝트에서는 Kahiii를 사용했고, 다른 멘토님은 mecab을 추천하셨지만, 리눅스환경이 필요했으므로 코모란을 사용하기로 했다.
+
+
+
+Komoran을 사용하기 위해서는 Knolpy라이브러리가 필요하다. 그래서 파이썬에서 pip을 이용해서 인스톨을 받지만, 어디선가 에러가 날 확률이 높다. 
+
+```
+pip install Knolpy
+```
+
+일단, 인스톨 하는 과정에서 필요한 준비물의 과정이 Java 1.7+ 가 설치가 되어 있어야 하고, JAVA_HOME를 설정(시스템 환경 변수)을 해야한다. 그리고 가장 오류가 많은 부분이 jpype의 에러다. 그냥 pip으로 인스톨이 되지 않기 때문에
+
+```
+https://www.lfd.uci.edu/~gohlke/pythonlibs/#jpype
+```
+
+상단의 사이트에 드어가서, 본인의 컴퓨터 사양과 파이썬 버전에 맞는 whl 파일을 다운 받는다. 나의 경우에는  파이썬이 3.7버전에 win 64비트이기 때문에 
+
+```
+JPype1‑0.7.0‑cp38‑cp38‑win32.whl
+```
+
+를 다운 받았다. 여기서 한가지 좀 이상하다면, 64비트인데 win32를 받는다. 왜 그런지는 모르겠지만 win32 외에 amd64가 있는데, 자신의 컴퓨터 가 라이전 cpu 64bit를 사용하고 있다면 OK 아니라면 오류가 난다. 기억해 두자.
+
+이렇게 진행을 했다며,다운을 다 받았을 것이다. 그러면 간단히 예제를 보면
+
+ ```python
+from konlpy.tag import Komoran
+ ```
+
+먼저 임포트를 진행하고 
+
+```python
+from konlpy.tag import Komoran
+from pprint import pprint
+
+komorean=Komoran() 
+text_file=open("파일위치/파일명",encoding='utf-8')
+
+text = text_file.read()
+pprint((komorean.pos(text)))
+```
+
+```
+결과
+ ('이', 'VCP'),
+ ('라는', 'ETM'),
+ ('의미', 'NNG'),
+ ('를', 'JKO'),
+ ('담', 'VV'),
+ ('고', 'EC'),
+ ('있', 'VX'),
+ ('습니다', 'EF'),
+ ('.', 'SF'),
+ .
+ .
+ .
+ .
+
+```
+
+형태소 분석기 자체를 짜는 것은 아주 간단하다. 그저 메소드를 쓸 수 있는 라이브러리 인스톨이 좀.. 번거롭다면 번거로울 뿐이다. 
+
+
+
+## 2. TF-IDF
+
+자! 형태소 분석이 끝이 났다면, 이제 TF-IDF를 진행하자. TF-IDF는 무엇인가?
+
+
+
+#### 2-1. TF-IDF 는?
+
+위키 피디아의 설명이 꽤나 잘 되어 있어서 퍼와봤다.
+
+```
+TF(단어 빈도, term frequency)는 특정한 단어가 문서 내에 얼마나 자주 등장하는지를 나타내는 값으로, 이 값이 높을수록 문서에서 중요하다고 생각할 수 있다. 하지만 단어 자체가 문서군 내에서 자주 사용되는 경우, 이것은 그 단어가 흔하게 등장한다는 것을 의미한다. 이것을 DF(문서 빈도, document frequency)라고 하며, 이 값의 역수를 IDF(역문서 빈도, inverse document frequency)라고 한다. TF-IDF는 TF와 IDF를 곱한 값이다.
+```
+
+위에서 형태소분석을 하는 이유에서 TF를 언급했다. 그리고 마지막 부분에서 약간의 결함이 있다고 했는데, 그 점을 보완하기 위해서 TF-IDF를 해야한다. 예시로 한번 이해를 해 보자. 
+
+위에서 언급한 소방공무원에 관한 기사에서 소방공무원과 같은 급으로 많이 언급되는 단어들이 있을까? 아마 소방서, 공무원, 국회와 같은 연관된 키워드들일 것이다. 그런데 자세히 뜯어보면, 기자, 이미지, 뉴스 같은 의미없는 단어임에도 TF 값만 놓고 보면 높은 키워드들도 있을 것이다. 어쩌면 더 높을 지도 모른다. 그래서 이런 결함을 보완하기 위해서 TF-IDF를 사용한다.  이제 코드를 보자.
+
+
+
+#### 2-2. TF-IDF는 어떻게 만드나요?
+
+> 참고:  https://kavita-ganesan.com/tfidftransformer-tfidfvectorizer-usage-differences/#.XdYjJVczbcs 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
