--- a/1차분석/텍스트 전처리.md
+++ b/1차분석/텍스트 전처리.md
@@ -50,12 +50,35 @@ data=text_file.readlines()
 noun_data = komoran.nouns(data)
 print(noun_data)
 
-
+결과
+['북녘', '동포', '여러분', '남녘', '국민', '여러분', '해외', '동포', '여러분', '전쟁', '한반도', '시작', '남과 북', '오늘', '한반'......]
 ```
 
 
 
 
+
+## 2. 정제와 정규화
+
+
+
+정제를 위해서 2가지를 제거 한다.
+
+1. 등장 빈도가 적은 단어
+2. 길이가 짧은 단어(영어에 더 적합함.)
+
+
+
+### 2-1. 예시
+
+```
+import re
+text = "I was wondering if anyone out there could enlighten me on this car."
+shortword = re.compile(r'\W*\b\w{1,2}\b')
+print(shortword.sub('', text))
+
+결과: was wondering anyone out there could enlighten this car.
+```
 
 
 
