--- a/1차분석/텍스트 전처리.md
+++ b/1차분석/텍스트 전처리.md
@@ -298,7 +298,25 @@ ca*t
 
 ### 5-5. 반복(+)
 
+반복을 나타내는 또 다른 메타 문자로 `+`가 있다. `+`는 최소 1번 이상 반복될 때 사용한다. 즉 `*`가 반복 횟수 0부터라면 `+`는 반복 횟수 1부터인 것이다.
 
+다음 정규식을 보자.
+
+```
+ca+t
+```
+
+위 정규식의 의미는 다음과 같다.
+
+> "c + a(1번 이상 반복) + t"
+
+위 정규식에 대한 매치여부는 다음 표와 같다.
+
+| 정규식 | 문자열 | Match 여부 | 설명                                    |
+| :----- | :----- | :--------- | :-------------------------------------- |
+| `ca+t` | ct     | No         | "a"가 0번 반복되어 매치되지 않음        |
+| `ca+t` | cat    | Yes        | "a"가 1번 이상 반복되어 매치 (1번 반복) |
+| `ca+t` | caaat  | Yes        | "a"가 1번 이상 반복되어 매치 (3번 반복) |
 
 
 
