--- a/분석/텍스트 전처리.md
+++ b/분석/텍스트 전처리.md
@@ -396,6 +396,132 @@ ab?c
 
 
 
+## 6. Re 모듈
+
+
+
+### Method
+
+컴파일된 패턴 객체는 4가지의 메서드를 제공한다.
+
+1. match() : 문자열의 처음부터 정규식과 매치되는지 조사한다.
+
+2. search(): 문자열 전체를 검색하여 정규식과 매치되는지 조사한다.
+
+   -> match(), search() 메서드에서는 매치가 되면, match 아니면 none이 출력
+
+#### 1번
+
+```python
+import re
+
+p=re.compile('[a-z]+')
+m=p.match("python")
+print(m)
+
+<re.Match object; span=(0, 6), match='python'>
+
+or
+
+m=p.match("3 python")
+print(m)
+
+None
+```
+
+
+
+#### 2번
+
+```python
+import re
+
+p=re.complie('[a-z]+')
+m=p.search("python")
+print(m)
+
+<re.Match object; span=(0, 6), match='python'>
+or
+
+m=p.search("3python")
+print(m)
+
+<re.Match object; span=(1, 7), match='python'>
+
+#3뒤에만 찾아서 match 시켜주네.
+```
+
+
+
+2. findall(): 정규식과 매치되는 모든 문자열(substring)을 리스트로 돌려준다.
+
+```python
+result = p.findall("life is short")
+print(result)
+
+['life', 'is', 'short']
+```
+
+
+
+4. finditer(): 정규식과 매치되는 모든 문자열(substring)을반복가능한 객체로 돌려준다.
+
+   ```python
+   result = p.finditer("life is short")
+   print(result)
+   
+   for r in result: print(r)
+       
+   <callable_iterator object at 0x00000203AFCF2190>
+   <re.Match object; span=(0, 4), match='life'>
+   <re.Match object; span=(5, 7), match='is'>
+   <re.Match object; span=(8, 13), match='short'>
+   ```
+
+   
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
+
 
 
 
