--- a/분석/text_mining sentimental.ipynb
+++ b/분석/text_mining sentimental.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "\n",
     "#파일 읽어오기\n",
-    "file = open('C:/Users/student/Documents/GitHub/Moons/분석/test3.txt','r',encoding='utf-8')\n",
+    "#file = open('C:/Users/student/Documents/GitHub/Moons/분석/test3.txt','r',encoding='utf-8')\n",
+    "file = open('C:/Users/user/Documents/Moons/분석/test3.txt','r',encoding='utf-8')\n",
     "line = file.read()\n",
     "\n",
     "#장(chapter)마다 나눔\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": "C:\\Users\\student\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\konlpy\\tag\\_okt.py:16: UserWarning: \"Twitter\" has changed to \"Okt\" since KoNLPy v0.4.5.\n  warn('\"Twitter\" has changed to \"Okt\" since KoNLPy v0.4.5.')\n"
+     "text": "C:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\konlpy\\tag\\_okt.py:16: UserWarning: \"Twitter\" has changed to \"Okt\" since KoNLPy v0.4.5.\n  warn('\"Twitter\" has changed to \"Okt\" since KoNLPy v0.4.5.')\n"
     }
    ],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,8 +125,9 @@
     "#twitter\n",
     "for sentence1 in sentences_tag:\n",
     "    for word, tag in sentence1:\n",
-    "        if tag in ['Noun']: #komoran\n",
-    "            noun_adj.append(word)\n",
+    "        if len(word)>1:\n",
+    "            if tag in ['Noun']: #komoran\n",
+    "                noun_adj.append(word)\n",
     "\n",
     "count = Counter(noun_adj)\n",
     "print(count)"
@@ -381,123 +383,6 @@
    "outputs": [],
    "source": [
     "###############################이하 연습장########################"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'docs_ko' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-28-bb60d2004269>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mpos\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mlambda\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'/'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mtexts_ko\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdocs_ko\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'docs_ko' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from konlpy.tag import Twitter; t = Twitter()\n",
-    "\n",
-    "pos = lambda d: ['/'.join(p) for p in t.pos(d)]\n",
-    "\n",
-    "texts_ko = [pos(doc) for doc in docs_ko]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gensim.models import word2vec\n",
-    "\n",
-    "wo=[]\n",
-    "for w in noun_adj:\n",
-    "    if len(w)>1:\n",
-    "        wo.append(w)\n",
-    "        \n",
-    "wv_model_ko = word2vec.Word2Vec(wo)\n",
-    "\n",
-    "wv_model_ko.init_sims(replace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'wv_model_ko' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-b47846c5e1fe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwv_model_ko\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'wv_model_ko' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(wv_model_ko)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wv_model_ko.save('ko_word2vec_e.model')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['여', '섯', '체', '험', '이', '야', '기', '제', '목', '원', '시', '림', '그', '하', '나', '수', '보', '아', '구', '렁', '것', '린', '어', '통', '짝', '동', '안', '소', '화', '밀', '모', '대', '해', '한', '참', '생', '각', '고', '색', '연', '필', '가', '지', '름', '애', '작', '품', '른', '자', '답', '코', '끼', '리', '명', '차', '라', '역', '사', '계', '산', '문', '법', '관', '심', '직', '업', '포', '호', '성', '공', '스', '로', '니', '노', '릇', '다', '선', '비', '행', '조', '종', '세', '저', '거', '의', '도', '움', '번', '중', '국', '별', '주', '일', '람', '까', '금', '만', '날', '간', '예', '으', '례', '프', '정', '치', '매', '우', '청', '년', '몹', '막', '장', '마', '음', '상', '터', '군', '데', '승', '혼', '천', '양', '운', '무', '얼', '러', '분', '방', '내', '굴', '력', '잘', '못', '때', '외', '습', '든', '실', '피', '두', '신', '듯', '되', '풀', '부', '인', '누', '위', '은', '벌', '써', '친', '미', '건', '찬', '절', '디', '판', '새', '바', '개', '머', '왕', '질', '령', '처', '물', '씨', '늘', '르', '불', '득', '존', '재', '줄', '걸', '멀', '오', '짐', '말', '웃', '돌', '백', '망', '경', '학', '발', '견', '혹', '당', '증', '식', '입', '형', '요', '숫', '엇', '버', '약', '벽', '십', '랑', '급', '더', '게', '느', '억', '슬', '픔', '감', '깔', '용', '서', '쪽', '밥', '루', '꾸', '앗', '레', '태', '향', '면', '영', '온', '는', '침', '몸', '단', '속', '난', '전', '열', '활', '잠', '볼', '트', '척', '꽃', '짓', '순', '손', '락', '빛', '송', '딘', '눈', '녁', '울', '록', '언', '허', '유', '덮', '책', '결', '철', '담', '임', '권', '복', '평', '폐', '곱', '슨', '병', '묵', '녕', '풍', '을', '등', '달', '점', '탐', '래', '카', '메', '너', '희', '냥', '꾼', '씬']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(list(wv_model_ko.wv.vocab.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gensim.models import Word2Vec\n",
-    "embedding_model = Word2Vec(noun_adj, size=100, window = 2, min_count=50, workers=4, iter=100, sg=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['여', '나', '이', '기', '제', '시', '그', '하', '수', '보', '아', '구', '위', '것', '어', '소', '모', '대', '해', '생', '각', '고', '난', '가', '지', '내', '른', '자', '답', '리', '사', '문', '로', '다', '저', '거', '도', '별', '때', '주', '일', '람', '우', '장', '마', '물', '양', '무', '말', '바', '왕', '오', '너', '꽃']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(list(embedding_model.wv.vocab.keys()))"
    ]
   }
  ],
