--- a/분석/text_mining sentimental.ipynb
+++ b/분석/text_mining sentimental.ipynb
@@ -80,7 +80,7 @@
     "    sentences_tag.append(morph)\n",
     "\n",
     "    nouns = twitter.morphs(sentence)\n",
-    "    nouns_tag.append(nouns)\n",
+    "    # nouns_tag.append(nouns)\n",
     "\n"
    ]
   },
@@ -97,7 +97,7 @@
    ],
    "source": [
     "print(sentences_tag[0])\n",
-    "print(nouns_tag[0])"
+    "# print(nouns_tag[0])"
    ]
   },
   {
