--- a/분석/text_mining_final.ipynb
+++ b/분석/text_mining_final.ipynb
@@ -485,27 +485,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 0,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "[-1]\n값은 -1\n"
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-110-e1ea55ee1ee0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    101\u001b[0m         \u001b[1;31m#print(i)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    102\u001b[0m         \u001b[1;31m#i = i.strip(\" \")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 103\u001b[1;33m         \u001b[0mpoint\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mksl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata_list\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    104\u001b[0m         \u001b[1;31m#print(point)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    105\u001b[0m         \u001b[1;31m# print(point[1])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-110-e1ea55ee1ee0>\u001b[0m in \u001b[0;36mdata_list\u001b[1;34m(wordname)\u001b[0m\n\u001b[0;32m     61\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     62\u001b[0m         \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'C:/Users/student/Documents/GitHub/Moons/분석/data/SentiWord_info.json'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8-sig'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 63\u001b[1;33m             \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     64\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m         \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'None'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'None'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import json\n",
@@ -521,13 +503,11 @@
     "\n",
     "##### 함수 모음 #######\n",
     "\n",
-    "def sum_list(list_inform,res=0):\n",
-    "    for i in list_inform:\n",
-    "        if type(i) == list:\n",
-    "            res += sum_list(i)\n",
-    "        else:\n",
-    "            res += i\n",
-    "        return res \n",
+    "def sum_list(list_inform):\n",
+    "    res=0\n",
+    "    for i in list_inform:      \n",
+    "        res += i\n",
+    "    return res \n",
     "\n",
     "\n",
     "#### 입력받은 사람이 들어간 문장 차기위한 변수 생성 #####\n",
@@ -583,15 +563,12 @@
     "        s_word = result[1]\n",
     "\n",
     "        return r_word, s_word\n",
+    "\n",
     "#감정분성 메인\n",
-    "\n",
-    "\n",
-    "\n",
     "pre_sents=[]\n",
     "for stuff in match_char[0:]:\n",
     "    stuff= \"\\n\".join([s for s in stuff.split(\"\\n\") if s])\n",
     "    pre_sents.append(stuff)\n",
-    "\n",
     "\n",
     "komoran_words=[]\n",
     "for sents in pre_sents:\n",
@@ -604,9 +581,15 @@
     "if __name__ == \"__main__\":\n",
     "\n",
     "    ksl = KnuSL\n",
+    "    count = 0\n",
+    "    \n",
     "    \n",
     "    for i in komoran_words:\n",
-    "        \n",
+    "\n",
+    "        count += 1\n",
+    "        if count==106:\n",
+    "            break\n",
+    "\n",
     "        #print(i)\n",
     "        #i = i.strip(\" \")\n",
     "        point = ksl.data_list(i)\n",
@@ -614,25 +597,30 @@
     "        # print(point[1])\n",
     "\n",
     "        #print(point[1][0:])\n",
-    "\n",
+    "        count = count+1\n",
     "        try:\n",
-    "            result_sum = []\n",
+    "            \n",
+    "            result_sum = 0\n",
     "            for score in point[1::2]:\n",
-    "                \n",
+    "                         \n",
     "                #print(score)\n",
     "                a = int(score)\n",
-    "                #print(score)\n",
+    "\n",
+    "                \n",
     "                #print(a)\n",
-    "                result_sum.append(a)\n",
+    "                result_sum += a \n",
+    "                \n",
+    "                #result_sum.append(a)\n",
     "                \n",
     "                #print(type(score))a\n",
     "            # print(i)    \n",
     "            #sum(result_sum)\n",
-    "\n",
-    "            print(result_sum)\n",
+    "             \n",
+    "            #print(result_sum)\n",
     "            \n",
     "        except ValueError:\n",
     "            continue\n",
+    "    print(result_sum)\n",
     "\n",
     "# for i in character_senti[0:]:\n",
     "                # if score == Number:\n",
@@ -642,9 +630,10 @@
     "\n",
     "        #print(senti_score)\n",
     "    #print(\"값은 \", sum(result_sum))   \n",
-    "    a = sum_list(result_sum)\n",
-    "    print(\"값은\" , sum_list(result_sum))\n",
-    "    print(\"값은\" , a)\n",
+    "# a = sum(result_sum)\n",
+    "# print(\"값은\" , a)\n",
+    "# print(\"값은\" , sum_list(result_sum))\n",
+    "\n",
     "# final_result = sum(result_sum)\n",
     "# print(final_result)       \n",
     "\n",
